// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupRegistrationTypeDialog render tests click on cancel closes group regType dialog 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    />
  </div>,
]
`;

exports[`GroupRegistrationTypeDialog render tests click on x closes group regType dialog 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    />
  </div>,
]
`;

exports[`GroupRegistrationTypeDialog render tests renders list of registration types when opened 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div>
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          EventWidgets_GroupMember_AddGroupMemberHeader__resx
                        </h2>
                      </div>
                    </div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem; color: rgb(39, 63, 105);"
                      tabindex="-1"
                    >
                      <div
                        class=""
                        style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      >
                        <div
                          class=""
                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 5px;"
                        >
                          EventGuestSide_GroupMemberRegistrationTypeModal_InstructionalText_resx
                        </div>
                        <div
                          class=""
                        >
                          <fieldset
                            class=""
                          >
                            <legend
                              class=""
                              for="RegTypeRadioButtonList"
                            >
                              <span
                                class=""
                              >
                                <span
                                  data-cvent-id="label"
                                />
                              </span>
                            </legend>
                            <div
                              class=""
                            >
                              <ul
                                class=""
                                data-cvent-id="input"
                                id="RegTypeRadioButtonList"
                              >
                                <li
                                  class=""
                                  data-cvent-id="option-RegTypeRadioButtonList_0"
                                >
                                  <input
                                    class=""
                                    id="RegTypeRadioButtonList_0"
                                    name="RegTypeRadioButtonList"
                                    type="radio"
                                    value="0"
                                  />
                                  <label
                                    for="RegTypeRadioButtonList_0"
                                  >
                                    RegType1
                                  </label>
                                </li>
                                <li
                                  class=""
                                  data-cvent-id="option-RegTypeRadioButtonList_1"
                                >
                                  <input
                                    class=""
                                    id="RegTypeRadioButtonList_1"
                                    name="RegTypeRadioButtonList"
                                    type="radio"
                                    value="1"
                                  />
                                  <label
                                    for="RegTypeRadioButtonList_1"
                                  >
                                    RegType2
                                  </label>
                                </li>
                              </ul>
                            </div>
                          </fieldset>
                        </div>
                        <div
                          class=""
                        >
                          <button
                            class=""
                            data-cvent-id="CancelButton"
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(4, 21, 50); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                            type="button"
                          >
                            _registrationNavigatorWidget_exitDefaultDisplayText__resx
                          </button>
                          <button
                            class=""
                            data-cvent-id="NextButton"
                            disabled=""
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                            type="button"
                          >
                            _registrationNavigatorWidget_forwardDefaultDisplayText__resx
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`GroupRegistrationTypeDialog user interaction tests Can switch between registration types and internal state is updated 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div>
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          EventWidgets_GroupMember_AddGroupMemberHeader__resx
                        </h2>
                      </div>
                    </div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem; color: rgb(39, 63, 105);"
                      tabindex="-1"
                    >
                      <div
                        class=""
                        style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      >
                        <div
                          class=""
                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 5px;"
                        >
                          EventGuestSide_GroupMemberRegistrationTypeModal_InstructionalText_resx
                        </div>
                        <div
                          class=""
                        >
                          <fieldset
                            class=""
                          >
                            <legend
                              class=""
                              for="RegTypeRadioButtonList"
                            >
                              <span
                                class=""
                              >
                                <span
                                  data-cvent-id="label"
                                />
                              </span>
                            </legend>
                            <div
                              class=""
                            >
                              <ul
                                class=""
                                data-cvent-id="input"
                                id="RegTypeRadioButtonList"
                              >
                                <li
                                  class=""
                                  data-cvent-id="option-RegTypeRadioButtonList_0"
                                >
                                  <input
                                    checked=true
                                    class=""
                                    id="RegTypeRadioButtonList_0"
                                    name="RegTypeRadioButtonList"
                                    type="radio"
                                    value="0"
                                  />
                                  <label
                                    for="RegTypeRadioButtonList_0"
                                  >
                                    RegType1
                                  </label>
                                </li>
                                <li
                                  class=""
                                  data-cvent-id="option-RegTypeRadioButtonList_1"
                                >
                                  <input
                                    class=""
                                    id="RegTypeRadioButtonList_1"
                                    name="RegTypeRadioButtonList"
                                    type="radio"
                                    value="1"
                                  />
                                  <label
                                    for="RegTypeRadioButtonList_1"
                                  >
                                    RegType2
                                  </label>
                                </li>
                              </ul>
                            </div>
                          </fieldset>
                        </div>
                        <div
                          class=""
                        >
                          <button
                            class=""
                            data-cvent-id="CancelButton"
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(4, 21, 50); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                            type="button"
                          >
                            _registrationNavigatorWidget_exitDefaultDisplayText__resx
                          </button>
                          <button
                            class=""
                            data-cvent-id="NextButton"
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                            type="button"
                          >
                            _registrationNavigatorWidget_forwardDefaultDisplayText__resx
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`GroupRegistrationTypeDialog user interaction tests Can switch between registration types and internal state is updated 2`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div>
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          EventWidgets_GroupMember_AddGroupMemberHeader__resx
                        </h2>
                      </div>
                    </div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem; color: rgb(39, 63, 105);"
                      tabindex="-1"
                    >
                      <div
                        class=""
                        style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      >
                        <div
                          class=""
                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 5px;"
                        >
                          EventGuestSide_GroupMemberRegistrationTypeModal_InstructionalText_resx
                        </div>
                        <div
                          class=""
                        >
                          <fieldset
                            class=""
                          >
                            <legend
                              class=""
                              for="RegTypeRadioButtonList"
                            >
                              <span
                                class=""
                              >
                                <span
                                  data-cvent-id="label"
                                />
                              </span>
                            </legend>
                            <div
                              class=""
                            >
                              <ul
                                class=""
                                data-cvent-id="input"
                                id="RegTypeRadioButtonList"
                              >
                                <li
                                  class=""
                                  data-cvent-id="option-RegTypeRadioButtonList_0"
                                >
                                  <input
                                    class=""
                                    id="RegTypeRadioButtonList_0"
                                    name="RegTypeRadioButtonList"
                                    type="radio"
                                    value="0"
                                  />
                                  <label
                                    for="RegTypeRadioButtonList_0"
                                  >
                                    RegType1
                                  </label>
                                </li>
                                <li
                                  class=""
                                  data-cvent-id="option-RegTypeRadioButtonList_1"
                                >
                                  <input
                                    checked=true
                                    class=""
                                    id="RegTypeRadioButtonList_1"
                                    name="RegTypeRadioButtonList"
                                    type="radio"
                                    value="1"
                                  />
                                  <label
                                    for="RegTypeRadioButtonList_1"
                                  >
                                    RegType2
                                  </label>
                                </li>
                              </ul>
                            </div>
                          </fieldset>
                        </div>
                        <div
                          class=""
                        >
                          <button
                            class=""
                            data-cvent-id="CancelButton"
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(4, 21, 50); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                            type="button"
                          >
                            _registrationNavigatorWidget_exitDefaultDisplayText__resx
                          </button>
                          <button
                            class=""
                            data-cvent-id="NextButton"
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                            type="button"
                          >
                            _registrationNavigatorWidget_forwardDefaultDisplayText__resx
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`GroupRegistrationTypeDialog user interaction tests Clicking next button calls the appropiate callback function with the updated internal regCart 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div>
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          EventWidgets_GroupMember_AddGroupMemberHeader__resx
                        </h2>
                      </div>
                    </div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem; color: rgb(39, 63, 105);"
                      tabindex="-1"
                    >
                      <div
                        class=""
                        style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      >
                        <div
                          class=""
                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 5px;"
                        >
                          EventGuestSide_GroupMemberRegistrationTypeModal_InstructionalText_resx
                        </div>
                        <div
                          class=""
                        >
                          <fieldset
                            class=""
                          >
                            <legend
                              class=""
                              for="RegTypeRadioButtonList"
                            >
                              <span
                                class=""
                              >
                                <span
                                  data-cvent-id="label"
                                />
                              </span>
                            </legend>
                            <div
                              class=""
                            >
                              <ul
                                class=""
                                data-cvent-id="input"
                                id="RegTypeRadioButtonList"
                              >
                                <li
                                  class=""
                                  data-cvent-id="option-RegTypeRadioButtonList_0"
                                >
                                  <input
                                    checked=true
                                    class=""
                                    id="RegTypeRadioButtonList_0"
                                    name="RegTypeRadioButtonList"
                                    type="radio"
                                    value="0"
                                  />
                                  <label
                                    for="RegTypeRadioButtonList_0"
                                  >
                                    RegType1
                                  </label>
                                </li>
                                <li
                                  class=""
                                  data-cvent-id="option-RegTypeRadioButtonList_1"
                                >
                                  <input
                                    class=""
                                    id="RegTypeRadioButtonList_1"
                                    name="RegTypeRadioButtonList"
                                    type="radio"
                                    value="1"
                                  />
                                  <label
                                    for="RegTypeRadioButtonList_1"
                                  >
                                    RegType2
                                  </label>
                                </li>
                              </ul>
                            </div>
                          </fieldset>
                        </div>
                        <div
                          class=""
                        >
                          <button
                            class=""
                            data-cvent-id="CancelButton"
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(4, 21, 50); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                            type="button"
                          >
                            _registrationNavigatorWidget_exitDefaultDisplayText__resx
                          </button>
                          <button
                            class=""
                            data-cvent-id="NextButton"
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                            type="button"
                          >
                            _registrationNavigatorWidget_forwardDefaultDisplayText__resx
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`GroupRegistrationTypeDialog user interaction tests Clicking next button calls the appropiate callback function with the updated internal regCart 2`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div>
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          EventWidgets_GroupMember_AddGroupMemberHeader__resx
                        </h2>
                      </div>
                    </div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem; color: rgb(39, 63, 105);"
                      tabindex="-1"
                    >
                      <div
                        class=""
                        style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      >
                        <div
                          class=""
                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 5px;"
                        >
                          EventGuestSide_GroupMemberRegistrationTypeModal_InstructionalText_resx
                        </div>
                        <div
                          class=""
                        >
                          <fieldset
                            class=""
                          >
                            <legend
                              class=""
                              for="RegTypeRadioButtonList"
                            >
                              <span
                                class=""
                              >
                                <span
                                  data-cvent-id="label"
                                />
                              </span>
                            </legend>
                            <div
                              class=""
                            >
                              <ul
                                class=""
                                data-cvent-id="input"
                                id="RegTypeRadioButtonList"
                              >
                                <li
                                  class=""
                                  data-cvent-id="option-RegTypeRadioButtonList_0"
                                >
                                  <input
                                    checked=true
                                    class=""
                                    id="RegTypeRadioButtonList_0"
                                    name="RegTypeRadioButtonList"
                                    type="radio"
                                    value="0"
                                  />
                                  <label
                                    for="RegTypeRadioButtonList_0"
                                  >
                                    RegType1
                                  </label>
                                </li>
                                <li
                                  class=""
                                  data-cvent-id="option-RegTypeRadioButtonList_1"
                                >
                                  <input
                                    class=""
                                    id="RegTypeRadioButtonList_1"
                                    name="RegTypeRadioButtonList"
                                    type="radio"
                                    value="1"
                                  />
                                  <label
                                    for="RegTypeRadioButtonList_1"
                                  >
                                    RegType2
                                  </label>
                                </li>
                              </ul>
                            </div>
                          </fieldset>
                        </div>
                        <div
                          class=""
                        >
                          <button
                            class=""
                            data-cvent-id="CancelButton"
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(4, 21, 50); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                            type="button"
                          >
                            _registrationNavigatorWidget_exitDefaultDisplayText__resx
                          </button>
                          <button
                            class=""
                            data-cvent-id="NextButton"
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                            type="button"
                          >
                            _registrationNavigatorWidget_forwardDefaultDisplayText__resx
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`GroupRegistrationTypeDialog user interaction tests Registration Type in disabled state if no admissionItem available for it 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div>
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          EventWidgets_GroupMember_AddGroupMemberHeader__resx
                        </h2>
                      </div>
                    </div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem; color: rgb(39, 63, 105);"
                      tabindex="-1"
                    >
                      <div
                        class=""
                        style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      >
                        <div
                          class=""
                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 5px;"
                        >
                          EventGuestSide_GroupMemberRegistrationTypeModal_InstructionalText_resx
                        </div>
                        <div
                          class=""
                        >
                          <fieldset
                            class=""
                          >
                            <legend
                              class=""
                              for="RegTypeRadioButtonList"
                            >
                              <span
                                class=""
                              >
                                <span
                                  data-cvent-id="label"
                                />
                              </span>
                            </legend>
                            <div
                              class=""
                            >
                              <ul
                                class=""
                                data-cvent-id="input"
                                id="RegTypeRadioButtonList"
                              >
                                <li
                                  class=""
                                  data-cvent-id="option-RegTypeRadioButtonList_0"
                                >
                                  <input
                                    checked=true
                                    class=""
                                    id="RegTypeRadioButtonList_0"
                                    name="RegTypeRadioButtonList"
                                    type="radio"
                                    value="0"
                                  />
                                  <label
                                    for="RegTypeRadioButtonList_0"
                                  >
                                    RegType1
                                  </label>
                                </li>
                                <li
                                  class=""
                                  data-cvent-id="option-RegTypeRadioButtonList_1"
                                >
                                  <input
                                    class=""
                                    id="RegTypeRadioButtonList_1"
                                    name="RegTypeRadioButtonList"
                                    type="radio"
                                    value="1"
                                  />
                                  <label
                                    for="RegTypeRadioButtonList_1"
                                  >
                                    RegType2
                                  </label>
                                </li>
                              </ul>
                            </div>
                          </fieldset>
                        </div>
                        <div
                          class=""
                        >
                          <button
                            class=""
                            data-cvent-id="CancelButton"
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(4, 21, 50); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                            type="button"
                          >
                            _registrationNavigatorWidget_exitDefaultDisplayText__resx
                          </button>
                          <button
                            class=""
                            data-cvent-id="NextButton"
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                            type="button"
                          >
                            _registrationNavigatorWidget_forwardDefaultDisplayText__resx
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;
